--- a/estilo.css
+++ b/estilo.css
@@ -49,7 +49,8 @@
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    margin-top: 60px;
+    margin-top: 10px;
+    padding-top: 30px;
   }
   
   .caixa {
