--- a/estilo.css
+++ b/estilo.css
@@ -48,7 +48,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 60px;
+    padding: 20px;
     margin-top: 10px;
     
   }
