--- a/estilo.css
+++ b/estilo.css
@@ -48,7 +48,7 @@ main {
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 400px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
     padding: 20px;
     margin-top: 500px;
