--- a/estilo.css
+++ b/estilo.css
@@ -51,7 +51,7 @@ main {
     align-items: flex-end;
     flex-direction: column;
     padding: 20px;
-    margin-top: 500px;
+    margin: 500px;
     
   }
   
