--- a/estilo.css
+++ b/estilo.css
@@ -12,17 +12,21 @@
     margin: 0px;
     border: 0px;
     box-sizing: border-box;
-
-}
+    color: white;
+   
+  }
+  
   body {
     background-image: url(http://paxprofundis.org/livros/simbolcript/cobi.gif);
     background-size: cover;
     background-position: center;
+   
+ 
   
   }
   
   header {
-    background-color: #eee7db;
+    background-color: black;
     display: flex;
     justify-content: center;
     padding: 16px;
@@ -49,8 +53,8 @@
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    margin: 300px;
-    
+    margin-top: 10px;
+  
   }
   
   .caixa {
